# csv-pg-injector

./: .gitignore  CHANGELOG.md  Cargo.toml  Changes.md  README.md  run_test.sh
.github/workflows/: rust.yml
src/: cli.rs  dburl.rs  deps.rs  inject.rs  lib.rs  main.rs  metrics.rs  run.rs
tests/: dburl_test.rs  injection_test.rs
tests/data/bookstore/: author.csv  book.csv  book_order.csv  bookstore-db.sql  customer.csv  publisher.csv
tests/data/bookstore_different_order/second_run/: author.csv
tests/data/bookstore_fail/: book.csv  order_line.csv
